# usuq

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
configuration/: base.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: configuration.rs  db.rs  errors.rs  main.rs  middleware.rs  models.rs  routes.rs
url-redirect/: Cargo.toml
url-redirect/src/: main.rs  prisma.rs  routes.rs
