[package]
name = "url-redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
url = "2.5.2"
uuid = { version = "1.10", features = ["v4"] }
# Automatically compile and link SQLite version to avoid common build issues
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
thiserror = "1"
